workshop03/myappv2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myappv2-deployment
    labels:
        name: myappv2
        
spec:
    replicas: 1
    selector:
        matchLabels:
            app: myappv2
    template:
        metadata:
            labels:
                app: myappv2
        spec:
            containers:
            - image: stackupiss/northwind-app:v2
              name: mydb
              ports:
              - containerPort: 3000
                name: myappv2
              imagePullPolicy: Always
