workshop03/myappv1-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: myappv1-svc
spec:
    selector:
        app: myappv1
    type: ClusterIP
    ports:
    - name: myappv1port
      port: 80
      targetPort: 3000
