workshop03/myappv2-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: myappv2-svc
spec:
    selector:
        app: myappv2
    type: ClusterIP
    ports:
    - name: myappv2port
      port: 80
      targetPort: 3000
